<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>dev.codesoapbox</groupId>
    <artifactId>backity</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>backity</name>
    <description>
        A web service for automatically downloading backups of your games from external clients such as GOG.
    </description>

    <modules>
        <module>backend</module>
        <module>frontend</module>
    </modules>

    <properties>
        <!-- Project version info -->
        <revision>0.0.1-SNAPSHOT</revision>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <!-- END of Project version info -->

        <!-- Sonar -->
        <sonar.projectKey>backity</sonar.projectKey>
        <sonar.projectName>Backity</sonar.projectName>
        <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
        <!-- END of Sonar -->
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <!-- Necessary for the ${revision} property to work properly. See:
                https://maven.apache.org/maven-ci-friendly.html#install-deploy -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>sonar-cloud</id>
            <properties>
                <sonar.organization>codesoapbox</sonar.organization>
                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
            </properties>
        </profile>
        <profile>
            <id>e2e</id>
            <modules>
                <module>e2e</module>
            </modules>
        </profile>
    </profiles>

</project>
